// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useHvRowExpand CellWithExpandButton snapshots as an additional system column 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="expandRowButtonAriaLabel"
    class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <div
      class="HvIconBase-root HvIconBase-xs"
      name="DropRightXS"
    >
      <svg
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="color0"
          d="M4.05 10.6l-.7-.7L7.25 6l-3.9-3.9.7-.7L8.65 6z"
          fill="#414141"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`useHvRowExpand CellWithExpandButton snapshots as an augmented cell 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="expandRowButtonAriaLabel"
    class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <div
      class="HvIconBase-root HvIconBase-xs"
      name="DropRightXS"
    >
      <svg
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="color0"
          d="M4.05 10.6l-.7-.7L7.25 6l-3.9-3.9.7-.7L8.65 6z"
          fill="#414141"
        />
      </svg>
    </div>
  </button>
  <span
    class="HvTypography-root HvTypography-highlightText"
  >
    Text
  </span>
</div>
`;
